




service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserByID(UserIDRequest) returns (UserResponse);
}
